<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMusicUI</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_tv">网易公司版权所有</string>
    <string name="actionbar_login_phone">手机号登录</string>
    <string name="actionbar_login_email">网易邮箱帐号登录</string>
    <string name="actionbar_login_forget">忘记密码</string>
    <string name="actionbar_regist_phone">手机号注册</string>
    <string name="actionbar_regist_phone_next">手机号验证</string>
    <string name="actionbar_recommend">listview</string>
    <string name="tv_regist_otherway">其他注册方式</string>
    <string name="tv_login_forgetpwd">忘记密码？</string>
    <string name="button_login">登录</string>
    <string name="button_next">下一步</string>
    <string name="button_login_phone">手机号登录</string>
    <string name="button_regist">注册</string>
    <string name="button_setname_start">开启云音乐</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="wangyiemail">网易邮箱</string>
    <string name="hello_world">Hello world!</string>
    <string name="actionbar_mymessage">我的信息</string>
    <string name="tv_sixin">私信</string>
    <string name="tv_pinglun">评论</string>
    <string name="tv_atme">\@我</string>
    <string name="tv_sysnotice">通知</string>
    <string name="tv_message_name">发消息人名字</string>
    <string name="tv_message">发送的消息</string>
    <string name="tv_message_time">消息时间</string>
    <string name="tv_no_message">暂时还没有收到消息</string>
    <string name="tv_recommend_fm">私人FM</string>
    <string name="tv_recommend_daily">每日歌曲推荐</string>
    <string name="tv_recommend_rank">云音乐热歌榜</string>
    <string name="tv_recommend_tuijian_title">推荐歌单</string>
    <string name="tv_recommend_tuijian1">第28届金曲奖获奖名单及现场演出</string>
    <string name="tv_recommend_tuijian2">TODO</string>
    <string name="tv_recommend_tuijian3">TODO</string>
    <string name="tv_recommend_tuijian4">古风剧情版，超级好听哦！！</string>
    <string name="tv_recommend_tuijian5">TODO</string>
    <string name="tv_recommend_tuijian6">TODO</string>
    <string name="tv_recommend_new_title">最新音乐</string>
    <string name="tv_recommend_new_name1">新歌推荐</string>
    <string name="tv_recommend_new_name2">TODO</string>
    <string name="tv_recommend_new_name3">TODO</string>
    <string name="tv_recommend_new_name4">TODO</string>
    <string name="tv_recommend_new_name5">TODO</string>
    <string name="tv_recommend_new_name6">TODO</string>
    <string name="tv_recommend_new_context1">推荐合口味的新歌</string>
    <string name="tv_recommend_new_context2">TODO</string>
    <string name="tv_recommend_new_context3">TODO</string>
    <string name="tv_recommend_new_context4">TODO</string>
    <string name="tv_recommend_new_context5">TODO</string>
    <string name="tv_recommend_new_context6">TODO</string>
    <string name="tv_recommend_dujia_title">独家放送</string>
    <string name="tv_recommend_dujia1">迈克尔杰克逊不在的这八年，欧美乐坛都发生了些什么</string>
    <string name="tv_recommend_dujia2">TODO</string>
    <string name="tv_recommend_dujia3">TODO</string>
    <string name="tv_recommend_zhuanlan_title">精选专栏</string>
    <string name="tv_recommend_zhuanlan_name1">洛天依：心中的歌声，难道只是二次元吗?</string>
    <string name="tv_recommend_zhuanlan_number1">阅读 35570</string>
    <string name="tv_recommend_zhuanlan_name2">洛天依：心中的歌声，难道只是二次元吗?</string>
    <string name="tv_recommend_zhuanlan_number2">阅读 4476</string>
    <string name="tv_recommend_zhuanlan_name3">洛天依：心中的歌声，难道只是二次元吗?</string>
    <string name="tv_recommend_zhuanlan_number3">阅读 3985</string>
    <string name="tv_recommend">个性推荐</string>
    <string name="tv_gedan">歌单</string>
    <string name="tv_radio">主播电台</string>
    <string name="tv_paihang">排行榜</string>

</resources>
