<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   
    android:background="#FFFFFF"
    android:orientation="vertical" >

   <LinearLayout
        android:id="@+id/recommend_ll_zhuanlan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <View 
            android:layout_height="18dp"
            android:layout_width="2dp"
            android:background="#E40000"/>

        <TextView
            android:id="@+id/recommend_tv_zhuanlan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/tv_recommend_zhuanlan_title"/>

        <ImageView
            android:id="@+id/recommend_iv_zhuanlan_more"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/a7_" />
        
    </LinearLayout>
    
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="15dp"
       android:gravity="center_vertical"
       android:orientation="horizontal">
       
       <LinearLayout 
            android:layout_width="0dp"
       		android:layout_height="match_parent"
       		android:layout_weight="1"
       		 android:orientation="vertical">
       		 
           <TextView 
               android:id="@+id/recommend_tv_zhuanlan_name1"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="5dp"
               android:text="@string/tv_recommend_zhuanlan_name1"
               />
           <TextView 
               android:id="@+id/recommend_tv_zhuanlan_number1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="10dp"
               android:layout_marginBottom="5dp"
               android:textSize="12sp"
                android:text="@string/tv_recommend_zhuanlan_number1"
               />
           
       </LinearLayout>

       <ImageView
           android:id="@+id/recommend_iv_zhuanlan1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/zs" />

   </LinearLayout>
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="2dp"
       android:gravity="center_vertical"
       android:orientation="horizontal">
       
       <LinearLayout 
            android:layout_width="0dp"
       		android:layout_height="match_parent"
       		android:layout_weight="1"
       		 android:orientation="vertical">
       		 
           <TextView 
               android:id="@+id/recommend_tv_zhuanlan_name2"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="5dp"
               android:text="@string/tv_recommend_zhuanlan_name2"
               />
           <TextView 
               android:id="@+id/recommend_tv_zhuanlan_number2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="10dp"
               android:layout_marginBottom="5dp"
               android:textSize="12sp"
                android:text="@string/tv_recommend_zhuanlan_number2"
               />
           
       </LinearLayout>

       <ImageView
            android:id="@+id/recommend_iv_zhuanlan2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/zs" />

   </LinearLayout>
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="2dp"
       android:gravity="center_vertical"
       android:orientation="horizontal">
       
       <LinearLayout 
            android:layout_width="0dp"
       		android:layout_height="match_parent"
       		android:layout_weight="1"
       		 android:orientation="vertical">
       		 
           <TextView 
               android:id="@+id/recommend_tv_zhuanlan_name3"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="5dp"
               android:text="@string/tv_recommend_zhuanlan_name3"
               />
           <TextView 
                android:id="@+id/recommend_tv_zhuanlan_number3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="20dp"
               android:layout_marginLeft="10dp"
               android:layout_marginBottom="5dp"
               android:textSize="12sp"
                android:text="@string/tv_recommend_zhuanlan_number3"
               />
           
       </LinearLayout>

       <ImageView
            android:id="@+id/recommend_iv_zhuanlan3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/zs" />

   </LinearLayout>
   
   

</LinearLayout>